--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -10,6 +10,7 @@
   justify-content: center;
   padding-bottom: 40px;
   border-bottom: 1px solid #21212166;
+  margin: 0;
 }
 
 @media screen and (max-width: 627px) {
