--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -6,6 +6,6 @@ padding: 60px 0 60px 0;
 font-size: 16px;
 font-weight: 400;
 color: #212121B2;
-margin: 0;
+margin: auto;
 
 }
