--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -35,6 +35,7 @@
 .profile__column {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .profile__description {
@@ -122,9 +123,4 @@
     width: 288px;
   }
 
-  @media (max-width: 480px) {
-    .profile {
-      margin: 34px 16px 0;
-    }
-  }
 }
